Overview of changes in lightdm-webkit2-greeter 2.1.3

    * Implement work-around in default theme for webkit2gtk localStorage bug.

Overview of changes in lightdm-webkit2-greeter 2.1.2

    * Allow access to right-click context menu when debug mode is enabled in lightdm-webkit2-greeter.conf.
    * Add additional debug messages to the default theme to help identify points of failure.
    * Fix issue with screen blanking functionality when greeter is used as a lockscreen.

Overview of changes in lightdm-webkit2-greeter 2.1.1

    * Fix default theme initialization failure if config file values are missing.

Overview of changes in lightdm-webkit2-greeter 2.1.0

    * It is now possible to configure branding including logos and backgrounds
      in lightdm-webkit2-greeter.conf.
    * The GTK+ fade-out on-exit animation was removed in favor of allowing themes
      to handle the animation with webkit (via javascript) as the latter provides
      a much nicer effect. See the default antergos theme for an implementation example.
    * Themes Javascript API Improvements:
        - Themes can now easily query values from lightdm-webkit2-greeter.conf
          using the new global "config" object:
            * config.get_str()
            * config.get_num()
            * config.get_bool()
        - A new global object "greeterutil" was added to provide utility functions
          to themes. Newly added utility functions:
            * greeterutil.dirlist() - List the contents of a directory.
            * greeterutil.text2html() - Escape HTML entities in a string.
        - Themes should now query the config file for the distro logo to use. See
          the default antergos theme for an implementation example.
    * Default theme:
        - Theme is no longer compiled to ES2015 as Webkit2Gtk now supports ES6.
        - The logo can now be configured in lightdm-webkit2-greeter.conf.